@@ -9,13 +9,13 @@
 
   <xs:simpleType name="NameType">
     <xs:restriction base="xs:string">
-      <xs:pattern value="[\x20-\x3C\x3E-\x7E]*" />
+      <xs:pattern value="[\x20-\x3C\x3E-\x7E]+" />
     </xs:restriction>
   </xs:simpleType>
 
   <xs:simpleType name="VariableNameType">
     <xs:restriction base="xs:string">
-      <xs:pattern value="[a-zA-Z0-9_ ]*" />
+      <xs:pattern value="[\x20-\x3C\x3E-\x7E]+" />
     </xs:restriction>
   </xs:simpleType>
 
